# hometask

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  Makefile  README.md  pyproject.toml
.github/workflows/: terraform_flow.yml
cloud_function/dataset_upload_function/: main.py  requirements.txt  settings.py
docs/Data Infrastructure Homework/: README.md
import_data/: data0001.csv  data0002.csv
terraform/: apis.tf  backend.tf  bigquery.tf  cloud-function.tf  cloud-storage.tf  iam.tf  providers.tf  variables.tf
terraform/modules/bigquery-dataset/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-function/: main.tf  outputs.tf  variables.tf
terraform/modules/kms-crypto-key/: main.tf  outputs.tf  variables.tf
terraform/modules/kms-key-ring/: main.tf  outputs.tf  variables.tf
terraform/modules/storage-bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/storage-bucket-object/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/tfvars/: common.tfvars
