[tool.poetry]
name = "hometask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pytest = "^8.2.0"
bandit = "^1.7.9"
flake8-pyproject = "^1.2.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pyright = "^1.1.370"
google-cloud-bigquery = "^3.26.0"
functions-framework = "^3.8.1"

[tool.bandit]
exclude_dirs = ["venv", "env", "tests"]

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__"]
ignore = [
    "W503", # Line break occurred before a binary operator (W503)
]

[tool.pyright]
reportMissingImports = true
reportTypedDictNotRequiredAccess = false
venv = ".venv"
venvPath = "."
exclude = [
    "**/__pycache__",
    ".venv",
    "**/tests",
    "**/tests",
    "**/.*",
    "**/env",
    "**/venv",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "pass", "if TYPE_CHECKING:"]
omit = ["tests/*"]
